tests/cases/parser/literals/double_comma_in_list_literal.stderr
error: expected an expression, however received a `,`
 --> $DIR/double_comma_in_list_literal.hash:3:9
2 |   
3 |   k := [1,,];
  |           ^ 
